# mizan

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  install.ps1  install.sh  masalik_network.json  pyproject.toml  start.sh  update.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci.yml  docs.yml  pr-check.yml  release.yml
backend/: _version.py  cli.py  doctor.py  providers.py  providers_ruh.py  qadar_research_paper.tex  references.bib  requirements.txt  settings.py  training_manager.py
backend/agents/: __init__.py  base.py  federation.py  khalifah.py  perpetual_rotation.py  shura_council.py  specialized.py
backend/api/: __init__.py  commands.py  main.py
backend/automation/: __init__.py  qadr.py  triggers.py  webhooks.py
backend/cognitive/: thinking_stream.py
backend/core/: __init__.py  architecture.py  creativity.py  developmental_stages.py  dream_engine.py  events.py  fitrah.py  fuad.py  hidayah.py  hooks.py  ihsan.py  imagination.py  lubb.py  middleware.py  nafs_triad.py  parallel_agents.py  plugins.py  qalb.py  qalb_processor.py  ruh_engine.py  sabr.py  self_healing.py  shukr.py  tawakkul.py  tawbah.py
backend/gateway/: __init__.py  bab.py  router.py
backend/gateway/channels/: __init__.py  base.py  discord.py  (+3 more)
backend/knowledge/: ingest.py
backend/learner/: data_export.py  ruh_learner.py
backend/memory/: __init__.py  dhikr.py  knowledge_graph.py  lawh_mahfuz.py  living_memory.py  masalik.py  memory_pyramid.py  quaternary.py  vector_store.py
backend/network/: __init__.py  ummah.py
backend/perception/: __init__.py  basirah.py  nutq.py  vision.py  voice.py
backend/qca/: __init__.py  answer_engine.py  cognitive_methods.py  engine.py  roots.py  training.py  yaqin_engine.py
backend/reasoning/: __init__.py  aql_engine.py  causal_engine.py  context_manager.py  planner.py
backend/router/: intelligent_router.py
backend/security/: __init__.py  auth.py  izn.py  validation.py  vault.py  wali.py
backend/skills/: __init__.py  base.py  registry.py
backend/task_queue/: priorities.py  task_queue.py  worker.py
backend/tests/: __init__.py
docker/: Dockerfile.backend  Dockerfile.backend.prod  Dockerfile.frontend  Dockerfile.frontend.prod  nginx-nossl.conf  nginx.conf
docs/: index.html
frontend/: index.html  nginx-spa.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  App.tsx  config.ts  index.css  types.ts
plugins/: __init__.py
plugins/hello_world/: main.py  plugin.json
plugins/request_logger/: main.py  plugin.json
ruh_model/: README.md  __init__.py  config.py  model.py  train.py  train_full.py
ruh_model/attention/: __init__.py  qalb.py  sam_basar.py
ruh_model/benchmarks/: __init__.py
ruh_model/configs/: alaqah.yaml  full_real.yaml  khalq_akhar.yaml  mudghah.yaml  nutfah.yaml
ruh_model/embedding/: __init__.py  ism.py  rope.py
ruh_model/layers/: __init__.py  adaptive_depth.py  ism_ffn.py  lubb.py  shura_moe.py  transformer_block.py
ruh_model/loss/: __init__.py  mizan_loss.py
ruh_model/tests/: __init__.py  conftest.py  test_bayan.py  test_ism.py
ruh_model/tokenizer/: __init__.py  bayan.py  english_bridge.py  morphology.py  q28_articulatory.py  root_vocab.py  tasrif_ops.py
ruh_model/training/: __init__.py  curriculum.py  scheduler.py  trainer.py
scripts/: bump-version.sh  release.sh  setup-branch-protection.sh
tests/: conftest.py  test_agent_comprehensive.py  test_agents.py  test_api.py  test_api_comprehensive.py  test_architecture.py  test_core_systems.py  test_doctor.py  test_e2e_scenarios.py  test_learner.py  test_masalik.py  test_memory.py  test_memory_comprehensive.py  test_providers_ruh.py  test_qca_comprehensive.py  test_qca_engine.py  test_router.py  test_security_comprehensive.py  test_task_queue.py
(+63 files in other folders)
