[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mizan"
version = "3.0.0"
description = "Agentic Personal AI - Quranic Cognitive Architecture for human-like reasoning"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "MIZAN Contributors" },
]
keywords = [
    "ai", "agent", "personal-ai", "agentic", "agi",
    "quranic", "cognitive-architecture", "llm", "assistant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=43.0.0",
    "croniter>=2.0.7",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
all = [
    "chromadb>=0.5.0",
    "python-telegram-bot>=21.5",
    "discord.py>=2.3.2",
    "slack-bolt>=1.20.0",
    "elevenlabs>=1.5.0",
]
channels = [
    "python-telegram-bot>=21.5",
    "discord.py>=2.3.2",
    "slack-bolt>=1.20.0",
]
vector = [
    "chromadb>=0.5.0",
]
voice = [
    "elevenlabs>=1.5.0",
]
ml = [
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "safetensors>=0.4.0",
    "epitran>=1.25.0",
    "panphon>=0.20.0",
    "datasets>=2.16.0",
    "huggingface-hub>=0.20.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
    "mypy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/CodeWithJuber/mizan"
Documentation = "https://github.com/CodeWithJuber/mizan/tree/main/docs"
Repository = "https://github.com/CodeWithJuber/mizan"
Issues = "https://github.com/CodeWithJuber/mizan/issues"

[project.scripts]
mizan = "backend.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert usage (ok in tests)
    "S104",  # hardcoded bind all interfaces (intentional for dev servers)
    "S105",  # hardcoded password (false positives on field names)
    "S108",  # hardcoded temp file (we use /tmp intentionally)
    "S110",  # try-except-pass (used for optional feature detection)
    "S112",  # try-except-continue (used for resilient iteration)
    "S311",  # non-cryptographic random (used for non-security purposes)
    "S602",  # subprocess shell=True (validated through Wali security layer)
    "S603",  # subprocess call (we validate commands)
    "S607",  # start process with partial path
    "B008",  # function call in default argument (used by FastAPI Depends())
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "S108"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
